--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "env-cmd react-scripts start",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
@@ -39,12 +39,12 @@
 	"devDependencies": {
 		"@babel/core": "^7.17.7",
 		"@babel/preset-env": "^7.16.11",
-		"cross-env": "^7.0.3",
-		"gulp-babel": "^8.0.0",
 		"autoprefixer": "^9.8.8",
+		"cross-env": "^7.0.3",
 		"cssnano": "^4.1.11",
 		"debug": "^4.3.3",
 		"gulp": "^4.0.2",
+		"gulp-babel": "^8.0.0",
 		"gulp-htmlclean": "^2.7.22",
 		"gulp-imagemin": "^6.2.0",
 		"gulp-newer": "^1.4.0",
@@ -53,6 +53,7 @@
 		"gulp-sourcemaps": "^2.6.5",
 		"gulp-strip-debug": "^3.0.0",
 		"gulp-uglify": "^3.0.2",
-		"normalize.css": "^8.0.1"
+		"normalize.css": "^8.0.1",
+		"react-responsive": "^9.0.0-beta.6"
 	}
 }
