--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "lesportugais",
+	"homepage": "https://mathieuguerin.ca/react/",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
