--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react-awesome-slider": "^4.1.0",
 		"react-bootstrap": "^2.2.1",
 		"react-dom": "^17.0.2",
+		"react-router-dom": "^6.2.2",
 		"react-scripts": "5.0.0",
 		"sass": "^1.49.9",
 		"sass-rem": "^3.0.0",
