--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
 	"private": true,
 	"dependencies": {
 		"@brainhubeu/react-carousel": "^2.0.4",
+		"@emailjs/browser": "^3.4.0",
 		"@testing-library/jest-dom": "^5.16.2",
 		"@testing-library/react": "^12.1.4",
 		"@testing-library/user-event": "^13.5.0",
 		"bootstrap": "^5.1.3",
+		"emailjs": "^3.8.0",
+		"emailjs-com": "^3.2.0",
 		"jquery": "^3.6.0",
 		"react": "^17.0.2",
 		"react-awesome-slider": "^4.1.0",
@@ -16,6 +19,7 @@
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^6.2.2",
 		"react-scripts": "5.0.0",
+		"react-scroll": "^1.8.6",
 		"sass": "^1.49.9",
 		"sass-rem": "^3.0.0",
 		"web-vitals": "^2.1.4"
