--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
 		"react-awesome-slider": "^4.1.0",
 		"react-bootstrap": "^2.2.1",
 		"react-dom": "^17.0.2",
+		"react-hash-link": "^1.0.1",
 		"react-icons": "^4.3.1",
+		"react-images": "^1.2.0-beta.7",
+		"react-photo-gallery": "^8.0.0",
+		"react-responsive-carousel": "^3.2.23",
 		"react-reveal": "^1.2.2",
 		"react-router-dom": "^6.2.2",
 		"react-scripts": "5.0.0",
