--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"react-spring": "^9.4.4",
 		"sass": "^1.49.9",
 		"sass-rem": "^3.0.0",
+		"swiper": "^8.0.7",
+		"swiper-react": "^1.0.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
