ajout des images compresser

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "lesportugais",
-	"homepage": "https://mathieuguerin.ca/react/",
+	"homepage": ".",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
